<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivity"
    android:background="#fff">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff">
        <android.support.v7.widget.Toolbar
            android:id="@+id/quiz_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="Challenge"/>
    </android.support.design.widget.AppBarLayout>


    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        android:layout_below="@id/app_bar"
        android:layout_marginTop="8dp"
        app:contentPadding="8dp"
        app:cardElevation="4dp"
        android:layout_marginStart="8dp"
        android:layout_centerHorizontal="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/progress_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:text="Time"
                android:textColor="@color/colorBlack"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/start_quiz_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">

        <Button
            android:id="@+id/start_quiz_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/white_button_background"
            android:text="@string/start_quiz"
            android:backgroundTint="#cc99ff"
            android:layout_margin="8dp"
            android:textColor="#fff"
            android:textAllCaps="false"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_points_26xp"
            android:layout_margin="8dp"
            android:textStyle="bold"
            android:textColor="#ff0000"
            android:visibility="gone"
            android:textSize="14sp"/>

    </LinearLayout>

    <include
        android:id="@+id/numerical_quiz_layout"
        layout="@layout/numerical_quiz"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:visibility="invisible"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_alignParentBottom="true"
        android:layout_margin="8dp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:text="@string/non_disclaimer"/>



</RelativeLayout>